force-app/main/default/objects/TempTest__Google_Drive_File__c/TempTest__Google_Drive_File__c.object-meta.xml
<CustomObject>
    <label>Google Drive File</label>
    <nameField>
        <label>Google Drive File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Drive Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>