force-app/main/default/objects/TempTest__Google_Drive_File__c/fields/TempTest__Download_Url__c.field-meta.xml
<CustomField>
    <fullName>TempTest__Download_Url__c</fullName>
    <label>Download Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>