force-app/main/default/objects/TempTest__Google_Drive_File__c/fields/TempTest__File_Name__c.field-meta.xml
<CustomField>
    <fullName>TempTest__File_Name__c</fullName>
    <description>It is a file Name</description>
    <label>File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>