force-app/main/default/objects/TempTest__Google_Drive_File__c/fields/TempTest__File_Size__c.field-meta.xml
<CustomField>
    <fullName>TempTest__File_Size__c</fullName>
    <label>File Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>